Lagt til og kjørt ktlint. (#582)